--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hola son @epabrego Hola. Esta es una lista de mis redes sociales para que puedas encontrarlas de forma fácil. De nada ;)
+Hola son @epabrego
